objects/IPM_Significant_Matter__c.object
<CustomObject>
    <description>IPMG - Used for identifying significant matters for Insurer Portfolio Manager</description>
    <fields>
        <fullName>IPM_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Significant Matters</relationshipLabel>
        <relationshipName>Significant_Matters</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Document_Location__c</fullName>
        <label>Document Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IPM_Reported_By_Other__c</fullName>
        <description>Identifies if someone other than a Contact reported the Significant Matter</description>
        <label>Reported By (Other)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the contact who reported the significant matter</description>
        <label>Reported By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Significant Matters</relationshipLabel>
        <relationshipName>Significant_Matters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Reported_Date__c</fullName>
        <description>The date that the Significant Matter was reported.</description>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Type__c</fullName>
        <inlineHelpText>Please refer to Self-insurer general information requirements - section 3 for further details pertaining to notification of Significant Matters.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Significant Breach - Legislation or Licence Conditions</fullName>
                </value>
                <value>
                    <fullName>Section 190 Default</fullName>
                </value>
                <value>
                    <fullName>Prevention of Approval and/or Operational Requirements</fullName>
                </value>
                <value>
                    <fullName>Legal issues or Litigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Significant Matter</label>
    <nameField>
        <label>Significant Matter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Significant Matters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>